--- a/test/SConstruct
+++ b/test/SConstruct
@@ -1,4 +1,3 @@
-import scons_compiledb
 import os
 import multiprocessing
 from os import listdir
@@ -37,12 +36,12 @@ env_options = {
 }
 
 env = Environment(**env_options)
+env.Tool('compilation_db')
 sbus_env = env.Clone()
-scons_compiledb.enable(env)
 
 unity = Glob('{}*.c'.format(UNITY))
-libs = SConscript('../SConscript', exports=['sbus_env'])
-libs += Glob('{}/**/*.c'.format(LIBS))
+(lib, includes) = SConscript('../SConscript', exports=['sbus_env'])
+env['CPPPATH'] += includes
 
 EXE = ''
 programs = []
@@ -50,15 +49,15 @@ programs = []
 for mod in MODULES:
     tests = Glob('./{}/*.c'.format(mod), strings=True)
     for t in [x for x in tests if not str.endswith(x, '_Runner.c')]:
-        sources = unity + libs
+        sources = unity
         env.Command(t.replace('.c', '_Runner.c'), t, '{} {}'.format(RBGEN, t))
         sources.append(t)
         sources.append(t.replace('.c', '_Runner.c'))
         name = t.replace('.c', '')
-        programs.append(env.Program(name, sources))
+        programs.append(env.Program(name, sources + [lib]))
         EXE += './{} && '.format(name)
 
 EXE += 'true'
-env.CompileDb()
+env.CompilationDatabase()
 
 PhonyTargets('test', programs, EXE)
